protected all endpoints, added PUT endpoint
